--- a/COMPLIANCE.yaml
+++ b/COMPLIANCE.yaml
@@ -4,8 +4,8 @@ description: |
   compliance.
 spec:
   - name: PIA
-    status: PIA_STATUS_HERE
+    status: not started
     last-updated: '2020-06-10T21:02:33.585Z'
   - name: STRA
-    status: STRA_STATUS_HERE
+    status: not started
     last-updated: '2020-06-10T21:02:33.585Z'
